--- a/FileUploadPOC/MainPage.xaml
+++ b/FileUploadPOC/MainPage.xaml
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="FileUploadPOC.MainPage">
-    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+    <StackLayout HorizontalOptions="Center">
         <!-- Place new controls here -->
-        <Button Text="Pick File" Clicked="Button_Clicked"></Button>
-        <Label x:Name="lblResult"/>
+        <Image Source="xamarinmonkeysbanner.png" HorizontalOptions="Center" Margin="0,100,0,0"/>
+        <Button Margin="0,20,0,0" Text="Browse File" Clicked="Button_Clicked"></Button>
+        <Label x:Name="lblName"/>
+        <Label x:Name="lblFilePath"/>
     </StackLayout>
 </ContentPage>
